--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
